<resources>
    <string name="app_name">ProyectoLA-KGA</string>
    <string name="ErrorMsgAdd">Error al agregar el dato</string>
    <string name="ErrorMsgUpdate">Error al modificar el dato</string>
    <string name="ErrorMsgRemove">Error al eliminar el dato</string>
    <string name="ErrorMsgGetAll">Error al obtener la lista de datos</string>
    <string name="ErrorMsgGetByid">Error al obtener el dato especifico</string>
    <string name="MsgDataNoFound">El dato no fue encontrado</string>
    <string name="btnPersonText_main">Agrega persona</string>
    <string name="btnPeopleText_main">Listar personas</string>
    <string name="TextName">Nombre</string>
    <string name="TextID">ID</string>
    <string name="TextFLastName">Primer apellido</string>
    <string name="TextSLastName">Segundo apellido</string>
    <string name="TextEmail">Email</string>
    <string name="TextPhone">Telefono</string>
    <string name="TextPhoto">Foto</string>
    <string name="TextProvince">Provincia</string>
    <string name="TextState">Canton</string>
    <string name="TextDistrict">Distrito</string>
    <string name="TextAddress">Direccion</string>
    <string name="Birthdate">Fecha</string>
</resources>